2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the link of other visual
	map when it is in a public visual console.
	
	Incident: #658

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/shortcut_bar.php, include/functions_ui.php: fixed the
	PHP warnings.

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.main.php,
	godmode/reporting/reporting_builder.php,
	include/functions_users.php: fixed the access to the report with the
	user profile "RW" and "RM".
	
	Incident: #655

2014-03-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/menu.php
	  godmode/groups/configure_modu_group.php
	  godmode/groups/modu_group_list.php: Moved 'Module groups'
	to 'Manage modules'.

2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed for opensource
	version the prediction modules.

2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_plugin.php,
	include/javascript/pandora_modules.js: fixed the automagic deletion
	of macros when load a component.
	
	Incident: #654

2014-03-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Change the unknown mode
	to dont set data to 0 when is unknown and to not ignore
	unknown periods when are too short. Fixed events, alerts
	and unknown graphs in boolean graphs too.

	* include/functions_events.php: Delete useless link
	to deprecated url in events details (module link)

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php: fixed the PHP warning in the function
	"html_get_predefined_table".
	
	Incident: #492

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_modules.js: fixed the javascript to
	load the WMI query in the form to edit the module.
	
	Incident: #598

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	